--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 body {
   font-family: 'Jua', sans-serif;
-  background-color: #ffffff;
+  background-color: #1fea4b;
   box-sizing: border-box;
   color: #35465d;
 }
+
 .file-upload {
-    padding: 15% 3%;
-    margin: 0 auto;
-    border-radius: 10px;
-    border: solid 1.5px #f6f7fa;
-    background-color: #f6f7fa;
+  padding: 15% 3%;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: solid 1.5px #f6f7fa;
+  background-color: #dbcaca;
 }
+
 .file-upload-btn {
   width: 100%;
   margin: 0;
@@ -42,6 +44,7 @@ body {
   display: none;
   text-align: center;
 }
+
 #loading {
   display: none;
 }
@@ -58,24 +61,24 @@ body {
 }
 
 .image-upload-wrap {
-    width: 60%;
-    margin: 0 auto;
-    position: relative;
-    object-fit: contain;
-    border-radius: 10px;
-    border: dashed 1.5px #35465d;
-    background-color: #ffffff;
+  width: 60%;
+  margin: 0 auto;
+  position: relative;
+  object-fit: contain;
+  border-radius: 10px;
+  border: dashed 1.5px #35465d;
+  background-color: #f8f404;
 }
 
 .image-dropping,
 .image-upload-wrap:hover {
-    background-color: #35465d82;
-    border: 1.5px dashed #ffffff;
+  background-color: #95252f82;
+  border: 1.5px dashed #ffffff;
 }
 
 .image-title-wrap {
   padding: 0 15px 15px 15px;
-  color: #222;
+  color: #a90606;
 }
 
 .drag-text {
@@ -123,15 +126,15 @@ body {
 .navbar-light .navbar-brand {
   line-height: 1.68;
   text-align: left;
-  color: #35465d; 
+  color: #35465d;
 }
 
 .navbar-light .navbar-toggler {
-    border-color: #ffffff;
+  border-color: #ffffff;
 }
 
 .section {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .title {
@@ -146,59 +149,71 @@ body {
   color: #35465d;
 }
 
+.kakao-ad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1px;
+  min-width: 350px;
+  min-height: 200px;
+  margin-bottom: 5px;
+}
+
 /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
   html {
     font-size: 10px;
   }
-    .navbar-brand {
-        font-size: 2rem;
-    }
+
+  .navbar-brand {
+    font-size: 2rem;
+  }
 }
 
 
 .youtube-link {
-    font-size: 1.5rem;
-    line-height: 1.71;
-    text-align: center;
-    color: #f73737;
-    text-decoration: underline;
+  font-size: 1.5rem;
+  line-height: 1.71;
+  text-align: center;
+  color: #f73737;
+  text-decoration: underline;
 }
 
 .youtube-link:hover {
-    font-size: 1.5rem;
-    line-height: 1.71;
-    text-align: center;
-    color: #f73737;
-    text-decoration: underline;
+  font-size: 1.5rem;
+  line-height: 1.71;
+  text-align: center;
+  color: #f73737;
+  text-decoration: underline;
 }
 
 .youtube-icon {
-    width: 30px;
-    height: 27.262px;
+  width: 30px;
+  height: 27.262px;
 }
 
 .upload {
-    width: 20%;
+  width: 20%;
 }
 
 .upload-text {
-    width: 58%;
-    font-size: 1.5rem;
-    line-height: 1.53;
-    text-align: center;
-    color: #35465d;
-    margin: 0 auto;
+  width: 58%;
+  font-size: 1.5rem;
+  line-height: 1.53;
+  text-align: center;
+  color: #35465d;
+  margin: 0 auto;
 }
 
 .footer {
-    background-color: initial;
-    color: initial;
+  background-color: initial;
+  color: initial;
 }
 
 .bar-container {
   height: 2.7rem;
 }
+
 .singer-box {
   position: absolute;
   top: 0;
@@ -208,6 +223,7 @@ body {
   width: 100%;
   background-color: rgba(49, 132, 155, 0.2);
 }
+
 .singer-bar {
   position: absolute;
   top: 0;
@@ -216,6 +232,7 @@ body {
   border-radius: 10px;
   background-color: rgba(49, 132, 155, 1);
 }
+
 .entertainer-box {
   position: absolute;
   top: 0;
@@ -225,6 +242,7 @@ body {
   width: 100%;
   background-color: rgba(117, 204, 84, 0.2);
 }
+
 .entertainer-bar {
   position: absolute;
   top: 0;
@@ -233,6 +251,7 @@ body {
   border-radius: 10px;
   background-color: rgba(117, 204, 84, 1);
 }
+
 .politician-box {
   position: absolute;
   top: 0;
@@ -242,6 +261,7 @@ body {
   width: 100%;
   background-color: rgba(27, 175, 234, 0.2);
 }
+
 .politician-bar {
   position: absolute;
   top: 0;
@@ -250,6 +270,7 @@ body {
   border-radius: 10px;
   background-color: rgba(27, 175, 234, 1);
 }
+
 .moviestar-box {
   position: absolute;
   top: 0;
@@ -259,6 +280,7 @@ body {
   width: 100%;
   background-color: rgba(235, 166, 190, 0.2);
 }
+
 .moviestar-bar {
   position: absolute;
   top: 0;
@@ -267,6 +289,7 @@ body {
   border-radius: 10px;
   background-color: rgba(235, 166, 190, 1);
 }
+
 .rich-box {
   position: absolute;
   top: 0;
@@ -276,6 +299,7 @@ body {
   width: 100%;
   background-color: rgba(195, 140, 102, 0.2);
 }
+
 .rich-bar {
   position: absolute;
   top: 0;
@@ -289,58 +313,72 @@ body {
   font-size: 1rem;
   color: #ffffff;
 }
+
 .animal-label {
-    width: 20%;
-    text-align: left;
-    height: 2rem;
+  width: 20%;
+  text-align: left;
+  height: 2rem;
 }
+
 #label-container {
-    width: 80%;
-    margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
+
 .result-message {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 
 .animal-explain {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
+
 .singer-animal-title {
-    color: #3ba363;
+  color: #3ba363;
 }
+
 .singer-animal-celeb {
-    color: #3ba363;
-    font-size: 1.2rem;
+  color: #3ba363;
+  font-size: 1.2rem;
 }
+
 .entertainer-animal-title {
-    color: #3ba363;
+  color: #3ba363;
 }
+
 .entertainer-animal-celeb {
-    color: #3ba363;
-    font-size: 1.2rem;
+  color: #3ba363;
+  font-size: 1.2rem;
 }
+
 .politician-animal-title {
-    color: #ff6c0a;
+  color: #ff6c0a;
 }
+
 .politician-animal-celeb {
-    color: #ff6c0a;
-    font-size: 1.2rem;
+  color: #ff6c0a;
+  font-size: 1.2rem;
 }
+
 .moviestar-animal-title {
-    color: #9b6b43;
+  color: #9b6b43;
 }
+
 .moviestar-animal-celeb {
-    color: #9b6b43;
-    font-size: 1.2rem;
+  color: #9b6b43;
+  font-size: 1.2rem;
 }
+
 .rich-animal-title {
-    color: #e56995;
+  color: #e56995;
 }
+
 .rich-animal-celeb {
-    color: #e56995;
-    font-size: 1.2rem;
+  color: #e56995;
+  font-size: 1.2rem;
 }
+
 /* .bear-animal-title {
     color: #9b6b43;
 }
@@ -383,7 +421,7 @@ label {
   transition: 0.3s;
 }
 
-.knob > i {
+.knob>i {
   position: absolute;
   width: 4px;
   height: 18px;
@@ -392,8 +430,8 @@ label {
   left: calc(50% - 2px);
 }
 
-.knob > i:before,
-.knob > i:after {
+.knob>i:before,
+.knob>i:after {
   width: 6px;
   position: absolute;
   top: 42%;
@@ -402,35 +440,37 @@ label {
   background-color: #f470a7;
 }
 
-.knob > i:before {
+.knob>i:before {
   left: 4px;
 }
-.knob > i:after {
+
+.knob>i:after {
   left: -6px;
 }
 
-input:checked + label > .knob {
+input:checked+label>.knob {
   box-shadow: 0 0 0 8px #a1c6dd inset;
   background-color: #e2ecf4;
   transform: translateX(49px) rotate(-140deg);
 }
 
-input:checked + label > .knob > i {
+input:checked+label>.knob>i {
   background-color: #a1c6dd;
 }
 
-input:checked + label > .knob > i:after,
-input:checked + label > .knob > i:before {
+input:checked+label>.knob>i:after,
+input:checked+label>.knob>i:before {
   background-color: #a1c6dd;
 }
 
-input:checked + label > .knob > i:after {
+input:checked+label>.knob>i:after {
   top: 14.5px;
   width: 12px;
   left: -7px;
   transform: rotate(45deg);
 }
-input:checked + label > .knob > i:before {
+
+input:checked+label>.knob>i:before {
   top: 13px;
   width: 12px;
   left: 0px;
@@ -438,6 +478,6 @@ input:checked + label > .knob > i:before {
 }
 
 .ad-banner {
-    width: 320px;
-    margin: 0 auto;
+  width: 320px;
+  margin: 0 auto;
 }
